# statismo

./: .gitignore  CMakeLists.txt  README
Examples/ITK/: CMakeLists.txt  buildDeformationModel.cpp  buildShapeModel.cpp  buildShapeModel_75pcvar.cpp  deformationModelFitting.cpp  shapeModelFitting.cpp
Examples/VTK/: BasicSamplingExample.cxx  BuildConditionalModelExample.cxx  BuildIntensityModelExample.cxx  BuildPartiallyFixedModelExample.cxx  BuildShapeModelExample.cxx  CMakeLists.txt  CrossValidationExample.cxx  ReduceModelVarianceExample.cxx
Representers/ITK/: itkStandardImageRepresenter.h  itkStandardImageRepresenter.txx  itkStandardMeshRepresenter.h  itkStandardMeshRepresenter.txx
Representers/VTK/: vtkHelper.h  vtkPolyDataRepresenter.h  vtkStandardImageRepresenter.h  vtkStandardImageRepresenter.txx  vtkStandardMeshRepresenter.cpp  vtkStandardMeshRepresenter.h  vtkStructuredPointsRepresenter.h  vtkUnstructuredGridRepresenter.h
Tests/: CMakeLists.txt
Tests/modelBuilderTests/: CMakeLists.txt
Tests/representerTests/: CMakeLists.txt
Wrapping/ITK/: CMakeLists.txt
Wrapping/SWIG/: CMakeLists.txt  statismo.i
modules/ITK/: CMakeLists.txt
modules/ITK/MHFitting/: CMakeLists.txt  Evaluators.h  MHFitting.h  MHFittingParameters.h  MHFittingUtils.h  MeshOperations.h  Proposals.h  Types.h  itkMHFitting.h  itkMHFittingTest.cxx
modules/ITK/MHFitting/Sampling/Logger/: AcceptRejectLogger.h  LoggerDistributor.h
modules/ITK/examples/: CMakeLists.txt  itkMHFittingTest.cxx
modules/ITK/include/: itkASMIdentityImagePreprocessor.h  itkActiveShapeModel.h  itkMHFitting.h
modules/ITK/tests/: CMakeLists.txt
modules/core/include/: MHFitting.h
modules/core/tests/: CMakeLists.txt
statismo/: CommonTypes.h  HDF5Utils.cxx  HDF5Utils.h  PartiallyFixedModelBuilder.txx  StatisticalModel.txx
statismo_ITK/: itkStatisticalModelTransformBase.h
