cmake_minimum_required (VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(PythonLibs)

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})


FIND_PATH(R_INCLUDE_PATH Rdefines.h)
INCLUDE_DIRECTORIES(${R_INCLUDE_PATH})

FIND_PACKAGE(VTK REQUIRED)
include (${VTK_USE_FILE})


if(VTK_MAJOR_VERSION EQUAL 5)
    # VTK 5 needs additional libraries
    set (VTK_LIBRARIES_PYTHON
        vtkCommonPythonD
        vtkPythonCore
        )
else(VTK_MAJOR_VERSION EQUAL 5)
    set (VTK_LIBRARIES_PYTHON "")
endif(VTK_MAJOR_VERSION EQUAL 5)

include_directories(${STATISMO_ROOT_DIR} ${STATISMO_INCLUDE_DIR} ${STATISMO_ROOT_DIR}/3rdParty 
					${VTK_INCLUDE_DIR}  ${STATISMO_ROOT_DIR}/Representers/VTK ${STATISMO_ROOT_DIR}/Representers
						${HDF5_INCLUDE_DIR} ${HDF5_INCLUDE_DIR_CPP})
						
link_directories (${STATISMO_LIBRARY_DIR} ${HDF5_LIBRARY_DIR})   


FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(statismo.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(statismo.i PROPERTIES SWIG_FLAGS "-includeall")

SWIG_ADD_MODULE(R_statismo r statismo.i  )
ADD_DEPENDENCIES(R_statismo HDF5)
SWIG_LINK_LIBRARIES(R_statismo R ${HDF5_LIBRARIES})

INSTALL(TARGETS R_statismo  LIBRARY DESTINATION lib/Python)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/statismo.py DESTINATION lib/Python)
